Prevent wrapping in "money" column of Financials

--- a/tildes/scss/modules/_table.scss
+++ b/tildes/scss/modules/_table.scss
@@ -6,6 +6,11 @@
   margin-top: 1rem;
   margin-bottom: 2rem;
 
+  .td-money {
+    text-align: right;
+    white-space: nowrap;
+  }
+
   .tr-summary {
     font-weight: bold;
   }
